<resources>
    <string name="app_name">Urban</string>
    <string name="splash_logo">splash_logo</string>
    <string name="welcome_to_meraform">Welcome to MeraForm</string>
    <string name="we_re_thrilled_to_see_you_again">We\'re thrilled to see you again!</string>
    <string name="enter_your_registered_mobile_number_to_receive_a_one_time_password_otp_for_secure_login">Enter your registered mobile number to receive a One-Time Password (OTP) for secure login.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="proceed_ahead">Proceed Ahead</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="skip">Skip</string>
    <string name="edit">Edit</string>
    <string name="enter_the_6_digit_otp">Enter the 6-digit OTP</string>
    <string name="didn_t_receive_an_otp">Didn\'t receive an OTP ? </string>
    <string name="resend_otp">Resend OTP</string>
    <string name="_0_89">0:89</string>
    <string name="verify_amp_continue"><![CDATA[Verify & Continue]]></string>
    <string name="welcome">Welcome!</string>
    <string name="its_seems_like_you_are_new_to_meraform_please_fill_out_the_details_below_to_create_your_account_and_get_started_on_your_journey_with_us">Its seems like you are new to MeraForm, Please fill out the details below to create your account and get started on your journey with us.</string>
    <string name="first_name">First Name*</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name*</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="mobile_number2">Mobile Number*</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="aadhar_card_number">Aadhar Card Number*</string>
    <string name="enter_aadhar_card_number">Enter Aadhar Card Number</string>
    <string name="birth_date">Birth Date*</string>
    <string name="select_date">Select date</string>
    <string name="gender">Gender*</string>
    <string name="select_gender">Select Gender</string>
    <string name="category">Category*</string>
    <string name="select_category">Select Category</string>
    <string name="family_details">Family Details</string>
    <string name="please_provide_the_details_of_your_family_members_to_help_us_offer_a_better_services">Please provide the details of your family members to help us offer a better services.</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="enter_father_name">Enter Father Name</string>
    <string name="mother_s_name">Mother\'s Name</string>
    <string name="enter_mother_name">Enter Mother Name</string>
    <string name="family_income">Family Income</string>
    <string name="_0">0</string>
    <string name="add_address">Add Address</string>
    <string name="please_enter_the_details_of_your_current_address">Please enter the details of your current address.</string>
    <string name="save_details">Save Details</string>
    <string name="select_state">Select State</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="address_line_1">Address Line 1*</string>
    <string name="enter_address">Enter Address</string>
    <string name="address_line_2">Address Line 2*</string>
    <string name="pin_code">Pin code</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service">Service</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <string name="continue2">Continue</string>
    <string name="welcome2">Welcome,</string>
    <string name="rohan">Rohan</string>
    <string name="ahmedabad">Ahmedabad</string>
    <string name="your_order">Your Order</string>
    <string name="see_all">See all</string>
    <string name="top_categories">Top Categories</string>
    <string name="see_all2">See all</string>
    <string name="top_services">Top Services</string>
    <string name="frequently_asked_question">Frequently Asked Question</string>
    <string name="contact_support">Contact Support</string>
    <string name="_91">+91</string>
    <string name="_987654321">987654321</string>
    <string name="support_meraform_com">support@meraform.com</string>
    <string name="purchases">Purchases</string>
    <string name="all">All</string>
    <string name="new2">New</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="_30_orders">30 Orders</string>
    <string name="services">Services</string>
    <string name="search_service">Search service</string>
    <string name="all_categories">All Categories</string>
    <string name="what_is_mera_form">What is Mera Form?</string>
    <string name="mera_form_is_an_online_platform_designed_to_streamline_the_process_of_filling_out_and_submitting_various_form_it_simplifies_form_management_for_individuals_and_organizations_by_offering_a_user_friendly_interface_and_secure_submission_options">Mera Form is an online platform designed to streamline the process of filling out and submitting various form. It simplifies form management for individuals and organizations by offering a user-friendly interface and secure submission options.</string>
    <string name="latestnews">LatestNews</string>
    <string name="january_1_2024">January 1, 2024</string>
    <string name="climate_change_mitigation_act">Climate Change Mitigation Act</string>
    <string name="this_act_aims_to_reduce_greenhouse_gas_emissions_by_40_by_2030_through_stricter_regulations">This act aims to reduce greenhouse gas emissions by 40% by 2030 through stricter regulations.</string>
    <string name="view_service">View Service</string>
    <string name="digital_education_initiatives">Digital Education Initiatives</string>
    <string name="_24_october_2024">24 October 2024</string>
    <string name="sanjay_rao">Sanjay Rao</string>
    <string name="placed_on_25_october_2024">Placed on 25 October 2024</string>
    <string name="rupees">₹</string>
    <string name="_528">528</string>
    <string name="last_submission_date">Last Submission Date :</string>
    <string name="_11_august_2024">11 August 2024</string>
    <string name="job">Job</string>
    <string name="_05_available">05 Available</string>
    <string name="_5">5</string>
    <string name="education">Education</string>
    <string name="expedited_services">Expedited Services</string>
    <string name="_3_6_rate">3.6 Rate</string>
    <string name="_17_reviews">17 Reviews</string>
    <string name="passport_services">Passport Services</string>
    <string name="_2_days_ago">2 days ago</string>
    <string name="chat">chat</string>
    <string name="select_city">Select City</string>
    <string name="update_profile">Update Profile</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
</resources>