<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_14sdp"
    android:background="@drawable/rounded_corner_gray3"
    android:paddingVertical="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_9sdp"
    android:layout_marginHorizontal="@dimen/_12sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/digital_education_initiatives"
            android:layout_weight="1"
            style="@style/poppinsMediumText"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/_12sdp"/>

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/uparrow"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_2sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_submission_date"
            style="@style/poppinsMediumText"
            android:textSize="@dimen/_10sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_11_august_2024"
            style="@style/poppinsSemiBoldText"
            android:textSize="@dimen/_10sdp"/>

    </LinearLayout>


</LinearLayout>