<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/_16sdp"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_14sdp">

    <ImageView
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/job" />

    <TextView
        style="@style/ralewayBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/job"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <TextView
        style="@style/poppinsMediumText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_weight="1"
        android:text="@string/_05_available"
        android:textColor="@color/gray"
        android:textSize="@dimen/_10sdp" />

    <TextView
        style="@style/poppinsMediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        android:textColor="@color/orange"
        android:textSize="@dimen/_10sdp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/raw_service"
        tools:itemCount="2"
        android:layout_marginTop="@dimen/_10sdp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/gray"
        android:layout_marginTop="@dimen/_10sdp"/>

</LinearLayout>