<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".registration.RegistrationActivity2">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageBackArrow"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/back_arrow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_14sdp"
                android:paddingVertical="@dimen/_10sdp">

                <TextView
                    style="@style/ralewayBoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/family_details"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/poppinsRegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/please_provide_the_details_of_your_family_members_to_help_us_offer_a_better_services"
                    android:textColor="@color/gray" />

                <TextView
                    style="@style/poppinsMediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/father_s_name"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etFatherName"
                    style="@style/poppinsRegularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/rounded_corner_border_gray"
                    android:hint="@string/enter_father_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/poppinsMediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/mother_s_name"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etMotherName"
                    style="@style/poppinsRegularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/rounded_corner_border_gray"
                    android:hint="@string/enter_mother_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLength="12"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/poppinsMediumText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/family_income"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/rounded_corner_sky"
                        android:padding="@dimen/_3sdp">

                        <TextView
                            android:id="@+id/txtIncome"
                            style="@style/poppinsMediumText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:textColor="@color/sky"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                </LinearLayout>

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_23sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:min="100"
                    android:progressDrawable="@drawable/custom_seekbar"
                    android:thumb="@drawable/seekbar" />

                <TextView
                    android:id="@+id/tvContinue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_240sdp"
                    android:background="@drawable/rounded_corner_orange"
                    android:fontFamily="@font/raleway_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="@dimen/_12ssp"
                    android:text="@string/continue2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>