<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".bottommenu.OrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_14sdp">

        <TextView
            style="@style/ralewayBoldText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/purchases"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/search2"
            android:layout_marginEnd="@dimen/_20sdp"/>

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/filter" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/rounded_corner_light_orange_border_orange"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:paddingHorizontal="@dimen/_7sdp">

        <TextView
            android:id="@+id/tvAll"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:background="@drawable/rounded_corner_white"
            android:paddingVertical="@dimen/_7sdp"
            style="@style/poppinsMediumText"
            android:textSize="@dimen/_10ssp"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingHorizontal="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/tvNew"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new2"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:paddingVertical="@dimen/_7sdp"
            style="@style/poppinsMediumText"
            android:textSize="@dimen/_10ssp"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingHorizontal="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/tvOngoing"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ongoing"
            android:paddingVertical="@dimen/_7sdp"
            android:layout_marginHorizontal="@dimen/_7sdp"
            style="@style/poppinsMediumText"
            android:textSize="@dimen/_10ssp"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingHorizontal="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/tvCompleted"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            android:paddingVertical="@dimen/_7sdp"
            style="@style/poppinsMediumText"
            android:textSize="@dimen/_10ssp"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingHorizontal="@dimen/_10sdp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ralewayMediumText"
        android:text="@string/_30_orders"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingHorizontal="@dimen/_14sdp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPurchases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:paddingHorizontal="@dimen/_14sdp"/>

</LinearLayout>