<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".registration.RegistrationActivity3">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageBackArrow"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/back_arrow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_14sdp"
                android:paddingVertical="@dimen/_10sdp">

                <TextView
                    style="@style/ralewayBoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/add_address"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/poppinsRegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/please_enter_the_details_of_your_current_address"
                    android:textColor="@color/gray" />

                <TextView
                    style="@style/poppinsMediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/address_line_1"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etAddress1"
                    style="@style/poppinsRegularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/rounded_corner_border_gray"
                    android:hint="@string/enter_address"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/poppinsMediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/address_line_2"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etMotherName"
                    style="@style/poppinsRegularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/rounded_corner_border_gray"
                    android:hint="@string/enter_address"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLength="12"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/poppinsMediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/state"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/llState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_corner_border_gray"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:paddingVertical="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/tvState"
                        style="@style/poppinsRegularText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_state"
                        android:textColor="@color/black"
                        app:drawableEndCompat="@drawable/ic_down_arrow" />

                    <Spinner
                        android:id="@+id/spinnerState"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:background="@drawable/rounded_corner_gray" />

                </LinearLayout>

                <TextView
                    style="@style/poppinsMediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/city"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/llCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_corner_border_gray"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:paddingVertical="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/tvCity"
                        style="@style/poppinsRegularText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_state"
                        android:textColor="@color/black"
                        app:drawableEndCompat="@drawable/ic_down_arrow" />

                    <Spinner
                        android:id="@+id/spinnerCity"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:background="@drawable/rounded_corner_gray" />

                </LinearLayout>

                <TextView
                    style="@style/poppinsMediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/pin_code"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etPinCode"
                    style="@style/poppinsRegularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/rounded_corner_border_gray"
                    android:hint="@string/enter_pin_code"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="@dimen/_10sdp"
                    android:maxLength="6"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/llSaveDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_60sdp"
                    android:background="@drawable/rounded_corner_orange"
                    android:padding="@dimen/_12ssp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/raleway_bold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/save_details"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>